--- a/ImmiCanada/Alberta.cshtml
+++ b/ImmiCanada/Alberta.cshtml
@@ -23,14 +23,14 @@
 
                 </div><br />
                 <div class="row col-sm-12">
-                    <div class="col-sm-4 font-weight-bold pos-rel"><i class="fa fa-check-circle-o icon-general-item" aria-hidden="true"></i>THỦ PHỦ</div>
-                    <div class="offset-1 font-weight-bold col-sm-7 pos-rel"><i class="fa fa-check-circle-o icon-general-item" aria-hidden="true"></i>THÀNH PHỐ LỚN NHẤT</div>
+                    <div class="col-sm-4 font-weight-bold">THỦ PHỦ</div>
+                    <div class="offset-1 font-weight-bold col-sm-7">THÀNH PHỐ LỚN NHẤT</div>
                     <div class="col-sm-4 text-red ">Edmonton</div>
                     <div class="offset-1 text-red col-sm-7">Calgary</div>
                 </div><br />
                 <div class="row col-sm-12">
-                    <div class="col-sm-4 font-weight-bold pos-rel"><i class="fa fa-check-circle-o icon-general-item" aria-hidden="true"></i>DIỆN TÍCH</div>
-                    <div class="offset-1 font-weight-bold col-sm-7 pos-rel"><i class="fa fa-check-circle-o icon-general-item" aria-hidden="true"></i>DÂN SỐ</div>
+                    <div class="col-sm-4 font-weight-bold">DIỆN TÍCH</div>
+                    <div class="offset-1 font-weight-bold col-sm-7">DÂN SỐ</div>
                     <div class="col-sm-4 text-red ">661.848 km2</div>
                     <div class="offset-1 text-red col-sm-7">4,428,112</div>
                 </div>
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    <div class="row pad-top40px work-grey-bk mar-bottom30px pad-bottom200px" style="background-image: url(/Content/images/States/Alberta/gioi-thieu-tinh-bang-alberta.jpg) ">
+    <div class="row pad-top40px work-grey-bk mar-bottom30px pad-bottom200px" style="background-image: url(/Content/images/States/Ontario/7_background_ontario.jpg) ">
         <div class="offset-1 col-sm-6 remove-paddingleft">
             <div class="canada-deserve-to-life pad-left30px">
                 <div class="row col-sm-12 canada-deserve-to-life-title remove-paddingleft">
@@ -83,20 +83,17 @@
                 </div>
                 <div class="row col-sm-12 remove-paddingleft">
                     Alberta cũng là nơi có những trường đại học đẳng cấp thế giới với số lượng sinh viên quốc tế lớn. Các trường đại học Alberta (Edmonton, AB) và đại học Calgary (Calgary, AB)
-                    là một số lưu ý lớn nhất và nổi tiếng nhất trên địa bàn tỉnh.
+                    là một số lưu ý lớn nhất và nổi tiếng nhất trên địa bàn tỉnh. 
                     <br /><br />
                     Alberta có một hệ thống giáo dục nổi tiếng, từ mẫu giáo đến các trường đại học, nơi sản xuất các nghiên cứu hàng đầu thế giới. Tại Canada, tất cả công dân và thường trú nhân dưới
-                    20 tuổi được học miễn phí cho đến hết cấp 3 thông qua hệ thống trường công lập. Khi bạn chuyển đến Alberta, con cái của bạn sẽ có những lựa chọn về trường học khác nhau, tất cả
-                    đều được hỗ trợ từ tiền thuế và không có phí.
+                    20 tuổi được học miễn phí cho đến hết cấp 3 thông qua hệ thống trường công lập. Khi bạn chuyển đến Alberta, con cái của bạn sẽ có những lựa chọn về trường học khác nhau, tất cả 
+                    đều được hỗ trợ từ tiền thuế và không có phí. 
 
                 </div><br />
             </div>
         </div>
-        <div class="col-sm-3 remove-paddingleft">
-            <img src="~/Content/images/States/Alberta/hero-1.jpg" class="img-thumbnail full-width" />
-        </div>
-        <div class="col-sm-2 remove-paddingleft">
-            <img src="~/Content/images/States/Alberta/hero-sm-1.jpg" class="img-thumbnail education-second-image min-height306px" />
+        <div class="col-sm-4 remove-paddingleft">
+            <img src="~/Content/images/States/Alberta/7_1_alberta_canada_visa.jpg" class="img-thumbnail min-height306px" />
         </div>
     </div>
 
