--- a/ImmiCanada/Views/Home/SchoolList/Alberta.cshtml
+++ b/ImmiCanada/Views/Home/SchoolList/Alberta.cshtml
@@ -2,45 +2,49 @@
     <div class="col-sm-3 offset-1 school-item mar-right15px">
         <img src="~/Content/images/States/Alberta/8_truong_dai_hoc_Alberta.jpg" class="img-thumbnail" />
         <div class="school-other-information pos-rel">
-            <div class="state-name">Alberta</div>
+            @*<div class="state-name">Alberta</div>*@
             <div class="school-name"><strong>Trường đại học Alberta</strong></div>
-            <div class="chool-criteria">
-                #6 đại học tốt nhất ở Canada <br />
-                #97 đại học toàn cầu tốt nhất
+            <div class="chool-criteria pad-top15px">
+                <p class="country-name"><img src="/Content/images/States/canada-drapeau.jpg" class="img-fluid country-flag" /><strong>Canada</strong></p>
+                <p class="country-state">Toronto</p>
             </div>
             <hr style="border: 1px solid #CCC;" />
-            <div class="pad-top40px text-center">
-                <input type="button" id="btnViewMore" value="XEM CHI TIẾT" class="btn-grey full-width" onclick="javascript: void (0);" />
+            <div class="chool-criteria">
+                <p class="float-left">#6 Canada</p>
+                <p class="float-right">#97 Toàn cầu</p>
             </div>
+            @*<div class="pad-top40px text-center">
+                <input type="button" id="btnViewMore" value="XEM CHI TIẾT" class="btn-grey full-width" onclick="javascript: void (0);" />
+            </div>*@
         </div>
     </div>
     <div class="col-sm-3 school-item mar-right15px">
         <img src="~/Content/images/States/Alberta/9_truong_dai_hoc_Calgary.jpg" class="img-thumbnail" />
         <div class="school-other-information pos-rel">
-            <div class="state-name">Alberta</div>
             <div class="school-name"><strong>Trường đại học Waterloo</strong></div>
-            <div class="chool-criteria">
-                #9 đại học tốt nhất ở Canada <br />
-                #122 đại học toàn cầu tốt nhất
+            <div class="chool-criteria pad-top15px">
+                <p class="country-name"><img src="/Content/images/States/canada-drapeau.jpg" class="img-fluid country-flag" /><strong>Canada</strong></p>
+                <p class="country-state">Toronto</p>
             </div>
             <hr style="border: 1px solid #CCC;" />
-            <div class="pad-top40px text-center">
-                <input type="button" id="btnViewMore" value="XEM CHI TIẾT" class="btn-grey full-width" onclick="javascript: void (0);" />
+            <div class="chool-criteria">
+                <p class="float-left">#9 Canada</p>
+                <p class="float-right">#22 Toàn cầu</p>
             </div>
         </div>
     </div>
     <div class="col-sm-3 school-item mar-right15px">
         <img src="~/Content/images/States/Alberta/10_truong_dai_hoc_Lethbridge.jpg" class="img-thumbnail" />
         <div class="school-other-information pos-rel">
-            <div class="state-name">Alberta</div>
             <div class="school-name"><strong>Trường đại học York</strong></div>
-            <div class="chool-criteria">
-                #33 đại học tốt nhất ở Canada <br />
-                #1005 đại học toàn cầu tốt nhất
+            <div class="chool-criteria pad-top15px">
+                <p class="country-name"><img src="/Content/images/States/canada-drapeau.jpg" class="img-fluid country-flag" /><strong>Canada</strong></p>
+                <p class="country-state">Toronto</p>
             </div>
             <hr style="border: 1px solid #CCC;" />
-            <div class="pad-top40px text-center">
-                <input type="button" id="btnViewMore" value="XEM CHI TIẾT" class="btn-grey full-width" onclick="javascript: void (0);" />
+            <div class="chool-criteria">
+                <p class="float-left">#33 Canada</p>
+                <p class="float-right">#1005 Toàn cầu</p>
             </div>
         </div>
     </div>
