--- a/ImmiCanada/Views/Shared/_LayoutNew.cshtml
+++ b/ImmiCanada/Views/Shared/_LayoutNew.cshtml
@@ -57,17 +57,34 @@
                     <!-- Links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">TRANG CHỦ</a>
+                            <a class="nav-link" href="/">TRANG CHỦ</a>
                         </li>
                         <!-- Dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarIntroduce" data-toggle="dropdown">
-                                GIỚI THIỆU
+                                TỈNH BANG
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">GIỚI THIỆU 1</a>
-                                <a class="dropdown-item" href="#">GIỚI THIỆU 2</a>
-                                <a class="dropdown-item" href="#">GIỚI THIỆU 3</a>
+                                <div class="row">
+                                    <div class="col-sm-3">
+                                        @Html.ActionLink("British Columbia (BC)", "britishColumbia", "stateinterface", null, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Alberta (AB)", "alberta", "stateinterface", null, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Nova Scotia (NS)", "nova", "stateinterface", null, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("New Brunswick (NB)", "newbrun", "stateinterface", null, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Saskatchewan (SK)", "Saskatchewan", "stateinterface", null, new { @class = "dropdown-item" })
+                                    </div>
+                                    <div class="col-sm-3">
+                                        @Html.ActionLink("Đảo Hoàng Tử Edward (PE)", "PEI", "stateinterface", null, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Ontario (ON)", "ontario", "stateinterface", null, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Manitoba (MB)", "manitoba", "stateinterface", null, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Newfoundland và Labrador (NL)", "nl", "stateinterface", null, new { @class = "dropdown-item" })
+                                        @Html.ActionLink("Quebec (QC)", "quebec", "stateinterface", null, new { @class = "dropdown-item" })
+                                    </div>
+                                    <div class="col-sm-6">
+                                            <img src="~/Content/images/States/canada-drapeau.jpg" class="img-fluid img-state-list" />
+                                    </div>
+                                </div>
+                                
                             </div>
                         </li>
 
